# ads-b

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Vagrantfile
lib/: DummyClass.cpp  DummyClass.h
main/: main.cpp
src/: CRCCalculator.h  DummyClass.cpp  DummyClass.h  main.cpp
t/: 00-dummy.cpp  000-dummy.cpp  main.cpp
test/: crc_calculator.cpp
